# savebutton-wxt

./: .gitignore  README.md
.github/scripts/: archive-safari.sh  export-safari.sh  install-apple-certs.sh
.github/workflows/: release.yml
daemon/: Cargo.toml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
daemon/packaging/: build-deb.sh  build-pkg.sh  build-rpm.sh
daemon/src/: lib.rs  main.rs
daemon/tests/: sync_test.rs
doc/arch/: adr-0001-core-concept.md  adr-0002-service-sync.md  adr-0003-metadata.md  adr-0004-opfs-storage.md  adr-0005-full-text-search.md
doc/design/: DESIGN.md
doc/stores/: STORES.md  listing.md
extension/: package.json  pnpm-lock.yaml  wxt.config.ts
extension/assets/: base.css
extension/entrypoints/: background.ts  options.html  popup.html
extension/entrypoints/options/: main.ts  style.css
extension/entrypoints/popup/: main.ts  style.css
extension/utils/: auth.ts  config.ts  crypto.ts  daemon.ts  desktop.ts  opfs.ts  sync.ts  timestamp.ts
extension/utils/__tests__/: auth.test.ts  timestamp.test.ts
safari/Save Button/: Save Button Extension (iOS).entitlements
safari/Save Button/Save Button.xcodeproj/: project.pbxproj
safari/Save Button/Shared (App)/: ViewController.swift
safari/Save Button/Shared (App)/Resources/: Script.js
safari/Save Button/Shared (Extension)/: SafariWebExtensionHandler.swift
safari/Save Button/iOS (App)/: AppDelegate.swift  SceneDelegate.swift
safari/Save Button/macOS (App)/: AppDelegate.swift
safari/Save Button/macOS (App)/Base.lproj/: Main.storyboard
(+3 files in other folders)
