[package]
name = "savebutton-daemon"
version = "1.0.0"
edition = "2021"
authors = ["lofi.mx"]
description = "Optional local daemon for the Save Button browser extension"
license = "MIT"

[lib]
name = "savebutton_daemon"
path = "src/lib.rs"

[[bin]]
name = "savebutton-daemon"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
toml = "0.8"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
ring = "0.17"
rand = "0.8"
chrono = "0.4"
thiserror = "1.0"
urlencoding = "2.1"
log = "0.4"
fern = "0.7"
tiny_http = "0.12"

[profile.release]
opt-level = "z"
lto = true
strip = true
